Progress on chapter 4.

--- a/TeXerei/bachelor.tex
+++ b/TeXerei/bachelor.tex
@@ -25,11 +25,6 @@
 \usepackage[T1]{fontenc}
 
 %
-% Paket für Quotes
-%
-% \usepackage[babel,french=guillemets,german=swiss]{csquotes}
-
-%
 % Paket zum Erweitern der Tabelleneigenschaften
 %
 \usepackage{array}
@@ -2720,7 +2715,7 @@ If we are more precisly, the parser above does not parse an expression
 with \emph{or} without parentheses like we promised before. %
 In order to fix the parser, we need to add the choice combinator. %
 Additionally, we want to present the second implementation to discard
-the read parenthesis. % 
+the read parentheses. % 
 
 \begin{hscode}\SaveRestoreHook
 \column{B}{@{}>{\hspre}l<{\hspost}@{}}%
@@ -2744,7 +2739,7 @@ small parser that can read an expression with or without parentheses. %
 In the following, we have to keep in mind that we build a strong parser
 by combining several parses that parse substructures. %
 
-\subsection{Query Parser}
+\subsection{Singature Parser}
 
 In our implementation we use the Haskell library Parsec to
 build the parser to read and analyze the user queries. %
@@ -2826,7 +2821,7 @@ If you take a closer look at the our list of type expression, you see
 that all identifiers that we have to parse, start with an upper-case
 letter, except for type variables. %
 Thus, at first, we need a parser that reads all valid identifiers. %
-Luckily, Parsec provides a feature to define the tokens that are used
+Luckily, Parsec provides a feature to define tokens that are used
 by the language and compose a parser for these tokens. %
 Tokens are constructs like white space, comments, identifiers,
 reserved words, numbers or strings. %
@@ -2834,8 +2829,8 @@ reserved words, numbers or strings. %
 The module \ensuremath{\Conid{ParsecToken}} exports a function \ensuremath{\Varid{makeTokenParser}} that
 takes such an language definition as returns a record with a set of
 lexical parsers. %
-Every lexical parser already considers surrounding white spaces, hence
-we do not need to consider white spaces when we use a field of the
+Every lexical parser already considers trailing white spaces, hence
+we do not need to consider white spaces when we use a parser of the
 language record. %
 The following code shows our language definition for type signatures:
 
@@ -2877,8 +2872,38 @@ an type expression. %
 Our parser also knows the binary operations \ensuremath{\Conid{AND}}, \ensuremath{\Conid{NOT}} and \ensuremath{\Conid{OR}} and
 since they are starting with an upper character, they are potential
 type expressions. %
-Therefore we need the parser to fail on these reserved operations when
+Therefore we need the parser to fail on these reserved names when
 parsing type signatures. %
+
+\begin{hscode}\SaveRestoreHook
+\column{B}{@{}>{\hspre}l<{\hspost}@{}}%
+\column{E}{@{}>{\hspre}l<{\hspost}@{}}%
+\>[B]{}\Varid{specifierTokenParser}\mathrel{=}\Varid{makeTokenParser}\;\Varid{specifierDef}{}\<[E]%
+\ColumnHook
+\end{hscode}\resethooks
+
+All parser the definitions generates are lexical parser, which means
+they handle surrounding white spaces. % 
+Hence, we do not need to consider white spaces, if we use one the
+these parsers. %
+As example, we get the parser that handles identifiers according to the defined
+language and another one that parses  %
+
+\begin{hscode}\SaveRestoreHook
+\column{B}{@{}>{\hspre}l<{\hspost}@{}}%
+\column{E}{@{}>{\hspre}l<{\hspost}@{}}%
+\>[B]{}\Varid{sigIdentifier}\mathrel{=}\Varid{identifier}\;\Varid{signatureTokenParser}{}\<[E]%
+\\
+\>[B]{}\Varid{sigReservedOp}\mathrel{=}\Varid{reservedOp}\;\Varid{signatureTokenParser}{}\<[E]%
+\ColumnHook
+\end{hscode}\resethooks
+
+Other lexical parser we will use in our code includes \ensuremath{\Varid{whitespace}},
+\ensuremath{\Varid{aSymbol}} and \ensuremath{\Varid{lexemer}}, where the latter takes a parser as argument
+and parses surrounding white spaces; \ensuremath{\Varid{aSymbol}} does the same, but
+takes a character as argument.%
+Additionally, we have parsers \ensuremath{\Varid{paren}} and \ensuremath{\Varid{bracket}} for parentheses
+and brackets. %
 
 Before we examine the first substructure, we need to consider the type
 of our parser. %
@@ -2897,17 +2922,30 @@ The first substructure we want to parse is a primitive type.
 
 \begin{hscode}\SaveRestoreHook
 \column{B}{@{}>{\hspre}l<{\hspost}@{}}%
+\column{3}{@{}>{\hspre}l<{\hspost}@{}}%
+\column{12}{@{}>{\hspre}l<{\hspost}@{}}%
 \column{E}{@{}>{\hspre}l<{\hspost}@{}}%
 \>[B]{}\Varid{primParser}\mathbin{::}\Conid{TypeExprParser}{}\<[E]%
 \\
-\>[B]{}\Varid{primParser}\mathrel{=}\Varid{prim}~\circledS~\Varid{sigIdentifier}{}\<[E]%
+\>[B]{}\Varid{primParser}\mathrel{=}{}\<[E]%
+\\
+\>[B]{}\hsindent{3}{}\<[3]%
+\>[3]{}\Varid{prim}~\circledS~(\Varid{sigIdentifier}{}\<[E]%
+\\
+\>[3]{}\hsindent{9}{}\<[12]%
+\>[12]{}~\rotatebox[origin=c]{90}{$\ominus$}~\Varid{aSymbol}\;\text{\tt \char34 ()\char34}){}\<[E]%
 \ColumnHook
 \end{hscode}\resethooks
 
-For primitive types we only need to consider one identifier and \ensuremath{\Varid{prim}}
-wraps this identifier into a \ensuremath{\Conid{TCons}}-structure with no type
+For primitive types we need to parse one identifier and \ensuremath{\Varid{prim}} wraps
+this identifier into a \ensuremath{\Conid{TCons}}-structure with no type
 arguments\footnote{A little reminder: \ensuremath{\Conid{Int}} => \ensuremath{\Conid{TCons}\;(\text{\tt \char34 Prelude\char34},\text{\tt \char34 Int\char34})\;[\mskip1.5mu \mskip1.5mu]}}. %
-In case of an n-ary type constructor, we parse at least one identifier
+In addition, we need to consider the unit type \ensuremath{()} as special
+constructor. %
+Otherwise we have to allow the search for functions with unvalid
+special characters. %
+
+In case of a n-ary type constructor, we parse at least one identifier
 a white space and another type expression. %
 
 \begin{hscode}\SaveRestoreHook
@@ -2930,14 +2968,6 @@ a white space and another type expression. %
 \\
 \>[3]{}\hsindent{1}{}\<[4]%
 \>[4]{}\circledast\Varid{sepBy1}\;(\Varid{signatureTerm}\;\Conid{False}\;\Conid{False})\;\Varid{whitespace}){}\<[E]%
-\\
-\>[B]{}\hsindent{3}{}\<[3]%
-\>[3]{}~\rotatebox[origin=c]{90}{$\ominus$}~\Varid{specialConstructors}{}\<[E]%
-\\
-\>[B]{}\mathbf{where}\;\Varid{specialConstructors}\mathrel{=}{}\<[E]%
-\\
-\>[B]{}\hsindent{3}{}\<[3]%
-\>[3]{}(\lambda \Varid{constr}\to \Varid{cons}\;\Varid{constr}\;[\mskip1.5mu \mskip1.5mu])~\circledS~(\Varid{string}\;\text{\tt \char34 :\char34}\rotatebox[origin=c]{90}{$\ominus$}\Varid{string}\;\text{\tt \char34 []\char34}\rotatebox[origin=c]{90}{$\ominus$}\Varid{string}\;\text{\tt \char34 ()\char34}){}\<[E]%
 \ColumnHook
 \end{hscode}\resethooks
 
@@ -2950,18 +2980,244 @@ kind. %
 At least one type signature (but no white space) needs to occur,
 otherwise the parser \ensuremath{\Varid{sepBy1}} fails and altogether \ensuremath{\Varid{consParser}}
 fails. %
-Thus, In our case we parse at least two type expression separated by a
+Thus, in our case we parse at least two type expressions separated by a
 white space or just one type expression. %
 The parser \ensuremath{\Varid{signatureTerm}} handles all the substructures we listed
-above. %
+above, except for function types, but we discuss this later. %
 The first boolean value indicates, if a constructor type may occur
 without parentheses; the second \ensuremath{\Conid{Bool}} is \ensuremath{\Conid{True}}, if we are in the
 process of parsing a list or tuple and \ensuremath{\Conid{False}} otherwise. %
-At last, we need to consider special constructors like the list
-constructors \ensuremath{\mathbin{:}} and \ensuremath{[\mskip1.5mu \mskip1.5mu]} that are defined in the Prelude as well as
-the unit type \ensuremath{()}. %
+In the defintion above, further constructor types are only allowed to
+occur with parentheses. % 
+As example to assure the accuracy of this idea: \ensuremath{\Conid{IO}\;\Varid{a}} and \ensuremath{\Conid{Maybe}\;\Varid{a}} are type
+constructors with one type argument. If we combine these type
+constructors to one expression, we get \ensuremath{\Conid{Maybe}\;(\Conid{IO}\;\Varid{a})} or \ensuremath{\Conid{IO}\;(\Conid{Maybe}\;\Varid{a})}. %
+We have to parenthesize the inner type constructor, because otherwise
+\ensuremath{\Conid{IO}\;\Conid{Maybe}\;\Varid{a}} and \ensuremath{\Conid{Maybe}\;\Conid{IO}\;\Varid{a}} suggest that both constructors take two
+type arguments instead of one. %
 
+The latter boolean value takes an important role in the parser for type variables,
+which we present next. %
 
+\begin{hscode}\SaveRestoreHook
+\column{B}{@{}>{\hspre}l<{\hspost}@{}}%
+\column{3}{@{}>{\hspre}l<{\hspost}@{}}%
+\column{4}{@{}>{\hspre}l<{\hspost}@{}}%
+\column{E}{@{}>{\hspre}l<{\hspost}@{}}%
+\>[B]{}\Varid{varParser}\mathbin{::}\Conid{Bool}\to \Conid{TypeExprParser}{}\<[E]%
+\\
+\>[B]{}\Varid{varParser}\;\Varid{inAListOrTuple}\mathrel{=}{}\<[E]%
+\\
+\>[B]{}\hsindent{3}{}\<[3]%
+\>[3]{}\Varid{var}~\circledS~((\Varid{guard}\;\Varid{inAListOrTuple}\sequ {}\<[E]%
+\\
+\>[3]{}\hsindent{1}{}\<[4]%
+\>[4]{}(\Varid{lexemer}\;\Varid{lower}<\!\!\!*~\Varid{notFollowedBy}\;\Varid{sigIdentifier})){}\<[E]%
+\\
+\>[3]{}\hsindent{1}{}\<[4]%
+\>[4]{}~\rotatebox[origin=c]{90}{$\ominus$}~\Varid{lexemer}\;\Varid{lower}<\!\!\!*~\Varid{notFollowedBy}\;\Varid{anyChar}){}\<[E]%
+\ColumnHook
+\end{hscode}\resethooks
+
+In the common case, a type variables is one lower-case character. %
+Thus, we do not allow type variables like \ensuremath{\Conid{IO}\;\Varid{abc}}, the variable
+parser fails on \ensuremath{\Varid{abc}} and our signature parser only reads \ensuremath{\Conid{IO}} as
+primitive type. %
+After parsing, the function \ensuremath{\Varid{var}} converts the character into a
+\ensuremath{\Conid{TypeExpr}}\footnote{\ensuremath{\Varid{a}} => \ensuremath{\Conid{TVar}\;\mathrm{97}}}. %
+If we parse type variables as part of a list or tuple, we need a
+slight change in our definition. %
+We still parse one lower-case character, but a type variable can
+appear in the middle of a tuple like \ensuremath{(\Conid{Int},\Varid{a},\Conid{Int})} and hence, the
+type variables is followed by a semicolon. %
+The same reason applies for a type variable at the of a tuple or in a
+list, since we have to parse the closing bracket and parenthesis
+respectively. %
+Therefore, we only forbid another identifier to appear after a type
+variable in a list or tuple. %
+
+Speaking of lists and tuples, let's take a look at the parsers for
+these two type expressions. %
+
+\begin{hscode}\SaveRestoreHook
+\column{B}{@{}>{\hspre}l<{\hspost}@{}}%
+\column{3}{@{}>{\hspre}l<{\hspost}@{}}%
+\column{E}{@{}>{\hspre}l<{\hspost}@{}}%
+\>[B]{}\Varid{listParser}\mathbin{::}\Conid{TypeExprParser}{}\<[E]%
+\\
+\>[B]{}\Varid{listParser}\mathrel{=}{}\<[E]%
+\\
+\>[B]{}\hsindent{3}{}\<[3]%
+\>[3]{}(\lambda \Varid{texpr}\to \Varid{cons}\;\text{\tt \char34 []\char34}\;[\mskip1.5mu \Varid{texpr}\mskip1.5mu])~\circledS~\Varid{bracket}\;(\Varid{signatureParser}\;\Conid{True}){}\<[E]%
+\ColumnHook
+\end{hscode}\resethooks
+
+The parser for lists is pretty simple, since a list can be any valid
+type signature wrapped in brackets. %
+In the end, we wrap the result in a type constructor with \ensuremath{[\mskip1.5mu \mskip1.5mu]} as
+constructor and the type signature as type arguments. %
+Whereas \ensuremath{\Varid{signatureTerm}} is the parser for any type expression besides
+function types, \ensuremath{\Varid{signatureParser}} parses the type signatures
+altogether. %
+The boolean value indicates again, if a constructor type may appear
+without surrounding parentheses. %
+
+Next, we present the parser for tuples in three steps.
+\begin{hscode}\SaveRestoreHook
+\column{B}{@{}>{\hspre}l<{\hspost}@{}}%
+\column{3}{@{}>{\hspre}l<{\hspost}@{}}%
+\column{4}{@{}>{\hspre}l<{\hspost}@{}}%
+\column{13}{@{}>{\hspre}c<{\hspost}@{}}%
+\column{13E}{@{}l@{}}%
+\column{E}{@{}>{\hspre}l<{\hspost}@{}}%
+\>[B]{}\Varid{parseTuple}{}\<[13]%
+\>[13]{}\mathrel{=}{}\<[13E]%
+\\
+\>[B]{}\hsindent{3}{}\<[3]%
+\>[3]{}(\lambda \Varid{item}\;\anonymous \;\Varid{itemList}\to \Varid{item}\mathbin{:}\Varid{itemList})~\circledS~{}\<[E]%
+\\
+\>[3]{}\hsindent{1}{}\<[4]%
+\>[4]{}(\Varid{signatureParser}\;\Conid{True}){}\<[E]%
+\\
+\>[3]{}\hsindent{1}{}\<[4]%
+\>[4]{}\circledast\Varid{aSymbol}\;\text{\tt \char34 ,\char34}{}\<[E]%
+\\
+\>[3]{}\hsindent{1}{}\<[4]%
+\>[4]{}\circledast\Varid{sepBy1}\;(\Varid{signatureParser}\;\Conid{True})\;(\Varid{string}\;\text{\tt \char34 ,\char34}){}\<[E]%
+\ColumnHook
+\end{hscode}\resethooks
+
+The first (and main) part looks similiar to the constructor parser. %
+Only this time we parse any kind of type expressions seperated by a
+comma instead of a white space. %
+We combine the first type expressions and the list of following type
+expression to a list. %
+This list represents the type arguments for the tuple constructor. %
+Next, we need to build the tuple constructor, because it depends on
+the number of arguments: \ensuremath{(,)} is a tuple constructor for a pair,
+whereas for a triple we need \ensuremath{(,,,)}. %
+
+\begin{hscode}\SaveRestoreHook
+\column{B}{@{}>{\hspre}l<{\hspost}@{}}%
+\column{17}{@{}>{\hspre}l<{\hspost}@{}}%
+\column{E}{@{}>{\hspre}l<{\hspost}@{}}%
+\>[B]{}\Varid{tupleCons}\;\Varid{list}{}\<[17]%
+\>[17]{}\mathrel{=}\text{\tt \char34 (\char34}\plus \Varid{replicate}\;(\Varid{length}\;\Varid{list}\mathbin{-}\mathrm{1})\;\text{\tt ','}\plus \text{\tt \char34 )\char34}{}\<[E]%
+\ColumnHook
+\end{hscode}\resethooks
+
+Thus, depending on the list of type arguments, we construct the tuple
+constructor. %
+And in the end, we combine these functions to gain a parser for
+tuples: %
+
+\begin{hscode}\SaveRestoreHook
+\column{B}{@{}>{\hspre}l<{\hspost}@{}}%
+\column{3}{@{}>{\hspre}l<{\hspost}@{}}%
+\column{5}{@{}>{\hspre}l<{\hspost}@{}}%
+\column{E}{@{}>{\hspre}l<{\hspost}@{}}%
+\>[B]{}\Varid{tupleParser}\mathbin{::}\Conid{TypeExprParser}{}\<[E]%
+\\
+\>[B]{}\Varid{tupleParser}\mathrel{=}{}\<[E]%
+\\
+\>[B]{}\hsindent{3}{}\<[3]%
+\>[3]{}((\lambda \Varid{tuple}\to \Varid{cons}\;(\Varid{tupleCons}\;\Varid{tuple})\;\Varid{tuple}){}\<[E]%
+\\
+\>[3]{}\hsindent{2}{}\<[5]%
+\>[5]{}~\circledS~\Varid{paren}\;\Varid{parseTuple}){}\<[E]%
+\ColumnHook
+\end{hscode}\resethooks
+     
+The last parser we need to discuss handles function types like \ensuremath{\Conid{Int}\to \Conid{Int}}. %
+For an infix operator, we always need to look ahead after parsing an
+identifier, if we come across the \ensuremath{\to }-operator next. %
+Luckily, the Parsec library provides a mechanism to relieve us of
+parsing operators. %
+
+At first, we define the affix and associativity of the operator and
+assign a function that determines the result of the parsing. %
+
+\begin{hscode}\SaveRestoreHook
+\column{B}{@{}>{\hspre}l<{\hspost}@{}}%
+\column{E}{@{}>{\hspre}l<{\hspost}@{}}%
+\>[B]{}\Varid{signatureTable}\mathrel{=}{}\<[E]%
+\\
+\>[B]{}[\mskip1.5mu [\mskip1.5mu \Conid{Infix}\;((\mathbin{\char92 \char95 }\to \Conid{FuncType})\circledS\Varid{lexemer}\;(\Varid{string}\;\text{\tt \char34 ->\char34}))\;\Conid{AssocRight}\mskip1.5mu]\mskip1.5mu]{}\<[E]%
+\ColumnHook
+\end{hscode}\resethooks
+
+Thus, when parsing a \ensuremath{\to } in an infix position, we return the partial
+application of \ensuremath{\Conid{FuncType}}, because the two arguments of this
+constructor are the type expression to the left and right of the
+operator\footnote{\ensuremath{\Conid{Int}\to \Conid{Int}} => \ensuremath{\Conid{FuncType}\;\Conid{Int}\;\Conid{Int}}}. %
+
+In order to use this parser, we use Parsec's function
+\ensuremath{\Varid{buildExpressionParser}} that takes such an definition table and
+another parser to combine the two oft them. %
+
+\begin{hscode}\SaveRestoreHook
+\column{B}{@{}>{\hspre}l<{\hspost}@{}}%
+\column{3}{@{}>{\hspre}l<{\hspost}@{}}%
+\column{E}{@{}>{\hspre}l<{\hspost}@{}}%
+\>[B]{}\Varid{signatureParser}\mathbin{::}\Conid{Bool}\to \Conid{TypeExprParser}{}\<[E]%
+\\
+\>[B]{}\Varid{signatureParser}\;\Varid{inAListOrTuple}\mathrel{=}{}\<[E]%
+\\
+\>[B]{}\hsindent{3}{}\<[3]%
+\>[3]{}\Varid{buildExpressionParser}\;\Varid{signatureTable}\;(\Varid{signatureTerm}\;\Conid{True}\;\Varid{inAListOrTuple}){}\<[E]%
+\ColumnHook
+\end{hscode}\resethooks
+
+The other parse that we assign is \ensuremath{\Varid{signatureTerm}}. %
+We need to parametrize \ensuremath{\Varid{signatureParser}} as well to indicate if we are
+in the process of parsing a tuple or list. %
+A list or a tuple can consist of function types without parentheses,
+whereas for a valid constructor type, a function type as arguments
+needs to be parenthesized. %
+Additionally, we want to parse redundant parenthesized signatures as
+well. %
+We can offer this functionality with the following definition of
+signatureTerm:
+
+\begin{hscode}\SaveRestoreHook
+\column{B}{@{}>{\hspre}l<{\hspost}@{}}%
+\column{3}{@{}>{\hspre}l<{\hspost}@{}}%
+\column{E}{@{}>{\hspre}l<{\hspost}@{}}%
+\>[B]{}\Varid{signatureTerm}\mathbin{::}\Conid{Bool}\to \Conid{Bool}\to \Conid{TypeExprParser}{}\<[E]%
+\\
+\>[B]{}\Varid{signatureTerm}\;\Varid{allowConsParser}\;\Varid{inAListOrTuple}\mathrel{=}{}\<[E]%
+\\
+\>[B]{}\hsindent{3}{}\<[3]%
+\>[3]{}(\Varid{guard}\;\Varid{allowConsParser}\sequ \Varid{try}\;\Varid{consParser}){}\<[E]%
+\\
+\>[B]{}\hsindent{3}{}\<[3]%
+\>[3]{}~\rotatebox[origin=c]{90}{$\ominus$}~\Varid{try}\;\Varid{tupleParser}{}\<[E]%
+\\
+\>[B]{}\hsindent{3}{}\<[3]%
+\>[3]{}~\rotatebox[origin=c]{90}{$\ominus$}~\Varid{paren}\;(\Varid{signatureParser}\;\Conid{False}){}\<[E]%
+\\
+\>[B]{}\hsindent{3}{}\<[3]%
+\>[3]{}~\rotatebox[origin=c]{90}{$\ominus$}~\Varid{listParser}{}\<[E]%
+\\
+\>[B]{}\hsindent{3}{}\<[3]%
+\>[3]{}~\rotatebox[origin=c]{90}{$\ominus$}~\Varid{primParser}{}\<[E]%
+\\
+\>[B]{}\hsindent{3}{}\<[3]%
+\>[3]{}~\rotatebox[origin=c]{90}{$\ominus$}~(\Varid{varParser}\;\Varid{inAListOrTuple}){}\<[E]%
+\ColumnHook
+\end{hscode}\resethooks
+
+In order to guarantee that we can parse tuples, parenthesized function
+types and redundant parentheses, we cannot parse any characters in
+case \ensuremath{\Varid{tupleParser}}fails, otherwise the parser for parenthesized
+expressions fails too. % 
+Therefore, we have to try \ensuremath{\Varid{tuplesParser}} first, thus, if it fails, the
+result is discarded and we can try for parenthesized expressions
+next. %
+
+\subsection{Query Parser}
+
+  
 % the parser does not check if the whole string was parsed -> better user-experience
 
 % Give a definition of the language (EBNF(?) / appendix). 
