Add new version of chapter 3 and fix typos in other chapters.

--- a/TeXerei/literatur/bib.bib
+++ b/TeXerei/literatur/bib.bib
@@ -1,18 +1,19 @@
 @misc{pakcs,
-	howpublished = {\url{http://www.informatik.uni-kiel.de/~pakcs/}}
-}
-
-@misc{holumbus,
-        howpublished = {\url{http://holumbus.fh-wedel.de/trac}}
+	howpublished = {\url{http://www.informatik.uni-kiel.de/~pakcs/}},
+        title = "{PAKCS Homepage}"
 }
 
 @misc{hayoo,
-        howpublished = {\url{http://holumbus.fh-wedel.de/hayoo/hayoo.html}}
+        howpublished = {\url{http://holumbus.fh-wedel.de/hayoo/hayoo.html}},
+        title = "{Hayoo! Homepage}"
 }
 
-@misc{currydoc,
-        howpublished = {\url{http://www-ps.informatik.uni-kiel.de/currywiki/tools/currydoc}}
+@misc{haskellreport,
+      howpublished = {\newline \url{http://www.haskell.org/definition/haskell98-report.pdf}},
+      title = "{The Haskell Language Report}",
+      author = {Simon Peyton Jones et al.}
 }
+
 
 @INPROCEEDINGS{currydoc2,
 author = "Hanus, M.",
@@ -24,16 +25,9 @@ publisher    = "Research Report",
 pages        = "225--228"
 }
 
-@misc{javadoc,
-        howpublished = {\url{http://www.oracle.com/technetwork/java/javase/documentation/index-jsp-135444.html}}
-}
-
 @misc{flat,
-        howpublished = {\url{http://www.informatik.uni-kiel.de/~curry/flat/}}
-}
-
-@misc{flat2,
-        howpublished = {\url{http://www.informatik.uni-kiel.de/~pakcs/lib/CDOC/Flat.html}}
+        howpublished = {\newline \url{http://www.informatik.uni-kiel.de/~curry/flat/}},
+        title = "{Information about FlatCurry}"
 }
 
 @article{monpars,
@@ -42,7 +36,6 @@ pages        = "225--228"
         journal = "Journal of Functional Programming",
         publisher = "Cambridge University Press",
         volume = 8,
-        number = 4,
         year = {1998},
         pages = "437--444"
 }
@@ -79,8 +72,37 @@ pages        = "225--228"
  address = {London, UK, UK},
 } 
 
-@MISC{parsec1,
-    author = {Daan Leijen and Erik Meijer},
-    title = {Parsec: A practical parser library},
-    year = {2001}
+@TECHREPORT{parsec1,
+author      = {Daan Leijen and Erik Meijer},
+title       = {Parsec: Direct Style Monadic Parser Combinators for the Real World},
+institution = {Department of Computer Science, Universiteit Utrecht},
+year        = 2001
 }
+
+@mastersthesis{indexingthesis,
+    author = {Schlatt, Sebastian M.},
+    school = {FH Wedel University of Applied Sciences},
+    title = {The Holumbus Framework: Creating scalable and highly customized crawlers and indexers},
+    url = {http://holumbus.fh-wedel.de/src/doc/thesis-indexing.pdf},
+    year = {2008}
+}
+
+@mastersthesis{searchingthesis,
+    author = {H\"{u}bel, Timo B.},
+    school = {FH Wedel University of Applied Sciences},
+    title = {The Holumbus Framework: Creating fast, flexible and highly customizable search engines with Haskell},
+    url = {http://holumbus.fh-wedel.de/src/doc/thesis-searching.pdf},
+    year = {2008}
+}
+
+
+@article{noone,
+ author = {Wadler, Philip},
+ title = {Why no one uses functional languages},
+ journal = {SIGPLAN Not.},
+ volume = {33},
+ year = {1998},
+ pages = {23--27},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
